<resources>
    <string name="app_name">Depa Checker</string>
    <string name="lbl_login">Login</string>
    <string name="txt_mail">E-mail</string>
    <string name="txt_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="err_login">Usuario o contraseña incorrecta</string>
    <string name="accepted_pass">123Pass</string>
    <string name="lbl_lista">Departamentos</string>
    <string name="lbl_luces">Luces OK</string>
    <string name="lbl_dormitorio">Elementos Dormitorio OK</string>
    <string name="lbl_wc">Elementos Baño OK</string>
    <string name="lbl_cocina">Elementos Cocina OK</string>
    <string name="lbl_terminaciones">Estado Terminaciones</string>
    <string name="btn_reset">Resetear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>